--- a/donate.html
+++ b/donate.html
@@ -14,7 +14,37 @@
   <meta property="og:url" content="https://alexschnellpa3.com/donate.html">
   <meta name="twitter:card" content="summary_large_image">
 
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <link rel="apple-touch-icon" href="/images/favicon.png">
+	
   <link rel="stylesheet" href="css/style.css">
+
+  <style>
+  #submitBtn { 
+    background: #1e40af; 
+    color: white; 
+    padding: 0.8rem 1.5rem; 
+    border: none; 
+    border-radius: 6px; 
+    cursor: pointer; 
+    font-weight: bold; 
+    width: 100%; 
+    font-family: inherit;
+    font-size: 1rem;
+    margin-top: 1rem;
+  }
+
+  #submitBtn:hover { 
+    background: #1e3a8a; 
+  }
+
+  #submitBtn:disabled {
+    background: #94a3b8;
+    cursor: not-allowed;
+  }
+  </style>
+	
 </head>
 <body>
 
