--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -50,8 +50,13 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc5.pdf')">
-                    Doc5
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/american-first-class-rail-modernization-act-of-2027.pdf')">
+                    American First-Class Rail Modernization Act of 2027
+                </a>
+            </li>
+            <li>
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc6.pdf')">
+                    Doc6
                 </a>
             </li>
         </ul>
@@ -79,4 +84,5 @@
 </body>
 
 </html>
+
 
