Refine the Website Style for Professionalism
css\style.css

--- a/constitution.html
+++ b/constitution.html
@@ -30,7 +30,7 @@
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
-    <a href="donate.html">Donate</a>
+    <a href="donate.html" class="donate-link">Donate</a>
 	<a href="contact.html">Contact</a>
   </nav>
 </header>
@@ -38,7 +38,7 @@
 <main>
 
 <section>
-  <img src="images/us-constitution.jpg" alt="US Constitution Image">
+  <img src="images/us-constitution.jpg" alt="US Constitution Image" class="content-image">
   <h2>A Constitutional Framework for Representation</h2>
 
   <p>
