--- a/grassroots.html
+++ b/grassroots.html
@@ -30,7 +30,7 @@
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
-    <a href="donate.html">Donate</a>
+    <a href="donate.html" class="donate-link">Donate</a>
 	<a href="contact.html">Contact</a>
   </nav>
 </header>
@@ -38,7 +38,7 @@
 <main>
 
 <section>
-  <img src="images/grassroots-movement.jpg" alt="Grassroots Image">
+  <img src="images/grassroots-movement.jpg" alt="Grassroots Image" class="content-image">
   <h2>Bottom-Up Representation</h2>
 
   <p>
