--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
-    <a href="donate.html">Donate</a>
+    <a href="donate.html" class="donate-link">Donate</a>
 	<a href="contact.html">Contact</a>
   </nav>
 </header>
@@ -38,7 +38,7 @@
 <main>
 
 <section>
-  <img src="images/alex-schnell-placeholder.jpg" alt="Campaign Image">
+  <img src="images/alex-schnell-placeholder.jpg" alt="Alex Schnell campaign photo" class="content-image">
   <h2>The Person Behind @AlexSchnellPA3 on X</h2>
 
   <p>
