--- a/thank-you.html
+++ b/thank-you.html
@@ -30,7 +30,7 @@
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
-    <a href="donate.html">Donate</a>
+    <a href="donate.html" class="donate-link">Donate</a>
 	<a href="contact.html">Contact</a>
   </nav>
 </header>
