--- a/twitter.html
+++ b/twitter.html
@@ -30,7 +30,7 @@
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
     <a href="twitter.html">Live Updates</a>
-    <a href="donate.html">Donate</a>
+    <a href="donate.html" class="donate-link">Donate</a>
 	<a href="contact.html">Contact</a>
   </nav>
 </header>
@@ -38,7 +38,7 @@
 <main>
 
 <section>
-  <img src="images/x-twitter-logo.jpg" alt="X Logo">
+  <img src="images/x-twitter-logo.jpg" alt="X Logo" class="content-image">
   <h2>Real-Time X Feed</h2>
 
   <p>
