--- a/pocketbook.html
+++ b/pocketbook.html
@@ -49,15 +49,22 @@
   Trust grows when government actions are open and accountable.
 </section>
 
-<section>
-  <h2>Term Limits</h2>
-  <p>
-    Long political careers weaken the connection between elected officials and the communities they serve. Regular turnover strengthens accountability and brings new perspectives.
-  </p>
-  
-  <p>
-	I support limiting House members to three terms and Senators to two terms. I also commit to serving no more than three terms in the House.
-  </p>
+<section class="schnell-flex-container">
+  <div class="schnell-flex-text">
+    <h2>Term Limits</h2>
+    <p>
+      Long political careers weaken the connection between elected officials and the communities they serve. Regular turnover strengthens accountability and brings new perspectives.
+    </p>
+    <p>
+      I support limiting House members to three terms and Senators to two terms. I also commit to serving no more than three terms in the House.
+    </p>
+  </div>
+
+  <div class="schnell-flex-media">
+    <blockquote class="twitter-tweet" data-dnt="true">
+      <a href="https://x.com/AlexSchnellPA3/status/2011969236281749586"></a>
+    </blockquote>
+  </div>
 </section>
 
 <section>
@@ -120,5 +127,6 @@
   </p>
 </footer>
 
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
