--- a/pocketbook.html
+++ b/pocketbook.html
@@ -60,11 +60,16 @@
     </p>
   </div>
 
-  <div class="schnell-flex-media">
-    <blockquote class="twitter-tweet" data-dnt="true">
-      <a href="https://x.com/AlexSchnellPA3/status/2011969236281749586"></a>
-    </blockquote>
-  </div>
+<div class="schnell-flex-media">
+  <a href="https://x.com/AlexSchnellPA3/status/2011969236281749586" target="_blank" rel="noopener">
+    <img src="images/term-limits-tweet.jpg" 
+         alt="Screenshot of a tweet from Alex Schnell regarding term limits" 
+         style="width: 100%; border-radius: 12px; border: 1px solid #ddd;">
+  </a>
+  <p style="font-size: 0.8rem; color: #666; text-align: center; margin-top: 8px;">
+    <a href="https://x.com/AlexSchnellPA3/status/2011969236281749586" target="_blank">View original post on X &rarr;</a>
+  </p>
+</div>
 </section>
 
 <section>
@@ -127,6 +132,5 @@
   </p>
 </footer>
 
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
