--- a/twitter.html
+++ b/twitter.html
@@ -47,28 +47,13 @@
     It refreshes automatically and displays posts in real time.
   </p>
 
-  <!-- Nitter timeline embed via iframe (choose a healthy instance). -->
-  <div class="nitter-embed" aria-label="Nitter timeline for @AlexSchnellPA3">
-    <iframe
-      src="https://xcancel.com/AlexSchnellPA3"
-      style="width: 100%; height: 800px; border: 1px solid #333; border-radius: 8px;"
-      loading="lazy"
-      referrerpolicy="no-referrer"
-      sandbox="allow-same-origin allow-scripts allow-popups"
-      title="Timeline: @AlexSchnellPA3">
-    </iframe>
+<script src="https://elfsightcdn.com/platform.js" async></script>
+  <div class="elfsight-app-a1bb5bff-33ea-4339-9025-8a64298900af" data-elfsight-app-lazy style="min-height: 400px;"></div>
 
-    <!-- Accessible fallback if the instance blocks iframes or is down -->
-    <p class="nitter-fallback">
-      If the embedded feed doesn’t load, open the profile directly:
-      <a href="https://xcancel.com/AlexSchnellPA3" rel="noopener">xcancel.com/AlexSchnellPA3</a>
-    </p>
-  </div>
-
-  <!-- No widgets.js: Nitter serves plain HTML and avoids tracking. -->
-  <!-- For single-featured tweets, you can embed per-tweet URLs:
-       https://xcancel.com/AlexSchnellPA3/status/TWEET_ID/embed
-       (Support varies per instance.) -->
+  <p class="nitter-fallback" style="margin-top: 20px;">
+    If the embedded feed doesn’t load, you can view the profile directly:
+    <a href="https://x.com/AlexSchnellPA3" target="_blank" rel="noopener">x.com/AlexSchnellPA3</a>
+  </p>
 </section>
 
 <section class="callout">
