--- a/twitter.html
+++ b/twitter.html
@@ -52,7 +52,7 @@
 
   <p class="nitter-fallback" style="margin-top: 20px;">
     If the embedded feed doesn’t load, you can view the profile directly:
-    <a href="https://x.com/AlexSchnellPA3" target="_blank" rel="noopener">x.com/AlexSchnellPA3</a>
+    <a href="https://xcancel.com/AlexSchnellPA3" rel="noopener">xcancel.com/AlexSchnellPA3</a>
   </p>
 </section>
 
