--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -55,8 +55,13 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc6.pdf')">
-                    Doc6
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/healthcare-freedom-and-scientific-integrity-act-of-2027.pdf')">
+                    Healthcare Freedom and Scientific Integrity Act of 2027
+                </a>
+            </li>
+            <li>
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc7.pdf')">
+                    Doc7
                 </a>
             </li>
         </ul>
@@ -84,5 +89,6 @@
 </body>
 
 </html>
+
 
 
