--- a/twitter.html
+++ b/twitter.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Live Updates | Alex Schnell for PA-3</title>
+  <title>Scheduled Batch Syncing Updates | Alex Schnell for PA-3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Real-time updates from @AlexSchnellPA3. A live, embedded X (Twitter) feed for the Alex Schnell grassroots campaign.">
+  <meta name="description" content="Scheduled Batch Syncing Updates from @AlexSchnellPA3. A consistent, embedded X (Twitter) feed for the Alex Schnell grassroots campaign.">
   <link rel="canonical" href="https://alexschnellpa3.com/twitter.html">
 
-  <meta property="og:title" content="Live Updates - Alex Schnell for PA-3">
-  <meta property="og:description" content="Follow real-time updates from the Alex Schnell grassroots campaign.">
+  <meta property="og:title" content="Scheduled Batch Syncing Updates - Alex Schnell for PA-3">
+  <meta property="og:description" content="Follow Scheduled Batch Syncing Updates from the Alex Schnell grassroots campaign.">
   <meta property="og:image" content="https://alexschnellpa3.com/images/x-twitter-logo.jpg">
   <meta property="og:url" content="https://alexschnellpa3.com">
   <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
 <body>
 
 <header>
-  <h1>Live Updates from @AlexSchnellPA3</h1>
+  <h1>Scheduled Batch Syncing Updates from @AlexSchnellPA3</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="constitution.html">The Constitution</a>
@@ -39,26 +39,26 @@
 
 <section>
   <img src="images/x-twitter-logo.jpg" alt="X Logo" class="content-image">
-  <h2>Real-Time X Feed</h2>
+  <h2>Scheduled Batch Syncing X Feed</h2>
 
   <p>
-    This page provides a live, embedded timeline of updates from my official X account,
+    This page provides a consistent, embedded timeline of updates from my official X account,
     <strong>@AlexSchnellPA3</strong>. Anyone can view this feed, even without an X account.
-    It refreshes automatically and displays posts in real time.
+    It refreshes automatically and displays posts in a stylish format.
   </p>
 
 <script src="https://elfsightcdn.com/platform.js" async></script>
   <div class="elfsight-app-a1bb5bff-33ea-4339-9025-8a64298900af" data-elfsight-app-lazy style="min-height: 400px;"></div>
 
   <p class="nitter-fallback" style="margin-top: 20px;">
-    If the embedded feed doesn’t load, you can view the profile directly:
+    If the embedded feed doesn’t load, you can view the profile directly (recommended for live updates):
     <a href="https://xcancel.com/AlexSchnellPA3" rel="noopener">xcancel.com/AlexSchnellPA3</a>
   </p>
 </section>
 
 <section class="callout">
   <strong>Transparency is a core principle of this campaign.</strong><br>
-  This live feed allows residents to follow updates directly and without barriers.
+  This consistent feed allows residents to follow updates directly and without barriers.
 </section>
 
 </main>
