--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="constitution.html">The Constitution</a>
     <a href="pocketbook.html">Pocketbook Issues</a>
     <a href="grassroots.html">Grassroots Campaign</a>
-    <a href="twitter.html">Live Updates</a>
+    <a href="twitter.html">Campaign Updates</a>
     <a href="donate.html" class="donate-link">Donate</a>
 	<a href="contact.html">Contact</a>
   </nav>
