--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -60,8 +60,13 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc7.pdf')">
-                    Doc7
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/intentionality-and-regulatory-simplicity-act-of-2027.pdf')">
+                    Intentionality and Regulatory Simplicity Act of 2027
+                </a>
+            </li>
+            <li>
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc8.pdf')">
+                    Doc8
                 </a>
             </li>
         </ul>
@@ -89,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
