--- a/twitter.html
+++ b/twitter.html
@@ -54,6 +54,28 @@
     If the embedded feed doesn’t load, you can view the profile directly (recommended for live updates):
     <a href="https://xcancel.com/AlexSchnellPA3" rel="noopener">xcancel.com/AlexSchnellPA3</a>
   </p>
+  
+  <div class="schnell-flex-container" style="justify-content: center; margin-top: 30px;">
+    
+    <div class="schnell-flex-media">
+      <a href="https://ballotpedia.org/Alexander_Schnell">
+        <img src="images/ballotpedia-share-icon.jpg" alt="Alexander Schnell (Republican Party) (also known as Alex) is running for election to the U.S. House to represent Pennsylvania's 3rd Congressional District." style="width:100%; border-radius: 8px;">
+      </a>
+    </div>
+
+    <div class="schnell-flex-media">
+      <a href="https://activote.app/QdQuB1SKn0b">
+        <img src="images/schnell-activote.jpg" alt="Alexander Schnell for U.S. House District 3" style="width:100%; border-radius: 8px;">
+      </a>
+    </div>
+
+    <div class="schnell-flex-media">
+      <a href="https://www.isidewith.com/">
+        <img src="images/isidewith-share-icon.jpg" alt="iSideWith offers voters a comprehensive platform to analyze and refine their political beliefs, enabling them to make more educated choices at the polls while staying updated on key issues." style="width:100%; border-radius: 8px;">
+      </a>
+    </div>
+
+  </div>
 </section>
 
 <section class="callout">
