--- a/grassroots.html
+++ b/grassroots.html
@@ -55,19 +55,25 @@
   Built openly. Reviewed carefully. Focused on the community.
 </section>
 
-<section>
-  <h2>Open by Design</h2>
-  <p>
-    This website is hosted on GitHub to support transparency and public participation.
-  </p>
-  
-  <p>
-	Anyone can propose improvements or corrections. Every suggestion is reviewed before it is added. Nothing appears on this site without consideration and accountability.
-  </p>
-  
-  <p>
-	Transparency is built into the structure of the campaign, not added as an afterthought.
-  </p>
+<section class="schnell-flex-container">
+  <div class="schnell-flex-text">
+    <h2>Open by Design</h2>
+    <p>
+      This website is hosted on GitHub to support transparency and public participation.
+    </p>
+    <p>
+      Anyone can propose improvements or corrections. Every suggestion is reviewed before it is added. Nothing appears on this site without consideration and accountability.
+    </p>
+    <p>
+      Transparency is built into the structure of the campaign, not added as an afterthought.
+    </p>
+  </div>
+
+  <div class="schnell-flex-media">
+    <img src="images/github-logo.jpg" 
+         alt="GitHub logo featuring the 'Octocat' silhouette" 
+         style="width: 100%; border-radius: 12px; border: 1px solid #ddd;">
+  </div>
 </section>
 
 <section>
@@ -86,20 +92,28 @@
   </p>
 </section>
 
-<section>
-  <h2>How to Get Involved</h2>
+<section class="schnell-flex-container">
+  <div class="schnell-flex-media">
+    <img src="images/cityscape-of-philadephia-pennsylvania.jpg" 
+         alt="Skyline of Philadelphia, Pennsylvania featuring the Liberty Place and Comcast buildings" 
+         style="width: 100%; border-radius: 12px; border: 1px solid #ddd;">
+  </div>
 
-  <ul>
-    <li>Attend community meetings</li>
-    <li>Talk with neighbors about local concerns</li>
-    <li>Share ideas or suggestions through the contact page</li>
-    <li>Volunteer with local organizations or civic groups</li>
-	<li>Bring creativity and initiative</li>
-  </ul>
-  
-  <p>
-	This campaign belongs to the community it represents.
-  </p>
+  <div class="schnell-flex-text">
+    <h2>How to Get Involved</h2>
+
+    <ul>
+      <li>Attend community meetings</li>
+      <li>Talk with neighbors about local concerns</li>
+      <li>Share ideas or suggestions through the contact page</li>
+      <li>Volunteer with local organizations or civic groups</li>
+      <li>Bring creativity and initiative</li>
+    </ul>
+    
+    <p>
+      This campaign belongs to the community it represents.
+    </p>
+  </div>
 </section>
 
 </main>
