--- a/index.html
+++ b/index.html
@@ -54,16 +54,22 @@
   </p>
 </section>
 
-<section>
-  <h2>Why I Am Running</h2>
+<section class="schnell-flex-container">
+  <div class="schnell-flex-media">
+    <img src="images/alex-schnell-portrait.jpg" 
+         alt="Portrait of Alex Schnell in a suit and red tie standing in front of stone steps" 
+         style="width: 100%; border-radius: 12px; border: 1px solid #ddd;">
+  </div>
 
-  <p>
-    Many residents feel that their concerns do not reach Washington. Too often, decisions are made far from the neighborhoods they affect. I believe representation should begin with consistent engagement in the community and with listening before legislating.
-  </p>
-
-  <p>
-    Trust in government cannot be demanded. It is built through transparency, accountability, and steady involvement. My goal is to run a campaign that reflects the district and invites residents to take part in shaping their representation.
-  </p>
+  <div class="schnell-flex-text">
+    <h2>Why I Am Running</h2>
+    <p>
+      Many residents feel that their concerns do not reach Washington. Too often, decisions are made far from the neighborhoods they affect. I believe representation should begin with consistent engagement in the community and with listening before legislating.
+    </p>
+    <p>
+      Trust in government cannot be demanded. It is built through transparency, accountability, and steady involvement. My goal is to run a campaign that reflects the district and invites residents to take part in shaping their representation.
+    </p>
+  </div>
 </section>
 
 <section class="callout">
@@ -71,21 +77,29 @@
   This campaign is community first, local in focus, and grounded in clear communication.
 </section>
 
-<section>
-  <h2>Ballot Access and Party Line</h2>
-  
-  <p>
-	Pennsylvania’s ballot access laws create significant barriers for grassroots and independent candidates. Collecting signatures must happen within a short window, and candidates outside the major parties often face higher thresholds without organizational support.
-  </p>
-  
-  <p>
-	To run a viable, community-focused campaign and meet these legal requirements, I am running on the Republican ballot line in this election cycle. This choice provides a practical path to ballot access and voter outreach in PA-3.
-  </p>
-  
-  <p>
-	My approach remains independent in spirit and in practice. My commitment is to the people of the district and to the principles that guide my work, not to party leadership or political machines.
-  </p>
-</section>  
+<section class="schnell-flex-container">
+  <div class="schnell-flex-text">
+    <h2>Ballot Access and Party Line</h2>
+    <p>
+      Pennsylvania’s ballot access laws create significant barriers for grassroots and independent candidates. Collecting signatures must happen within a short window, and candidates outside the major parties often face higher thresholds without organizational support.
+    </p>
+    <p>
+      To run a viable, community-focused campaign and meet these legal requirements, I am running on the Republican ballot line in this election cycle. This choice provides a practical path to ballot access and voter outreach in PA-3.
+    </p>
+    <p>
+      My approach remains independent in spirit and in practice. My commitment is to the people of the district and to the principles that guide my work, not to party leadership or political machines.
+    </p>
+  </div>
+
+  <div class="schnell-flex-media">
+    <img src="images/ballot-access-law.jpg" 
+         alt="Table showing Pennsylvania ballot access requirements: 1,000 signatures for major parties vs. 2% of previous vote (often 3,000-5,000+) for independents, citing PA Statute Title 25 P.S. § 2911." 
+         style="width: 100%; border-radius: 12px; border: 1px solid #ddd;">
+    <p style="font-size: 0.8rem; color: #666; text-align: center; margin-top: 8px;">
+      Source: Pennsylvania Statutes Title 25 P.S. § 2911
+    </p>
+  </div>
+</section>
   
 <section class="callout">
   <strong>A Campaign Built by the District</strong><br>
