--- a/pocketbook.html
+++ b/pocketbook.html
@@ -93,15 +93,22 @@
   </p>  
 </section>
 
-<section>
-  <h2>Campaign Funding and Local Influence</h2>
-  <p>
-    Campaign funding should reflect the interests of the people who live in the district. I support limiting donations to individuals and organizations within the jurisdiction.
-  </p>
-  
-  <p>
-	Local voices should guide local representation. Large outside contributions shift attention away from community needs and reduce public trust.
-  </p>
+<section class="schnell-flex-container">
+  <div class="schnell-flex-media">
+    <img src="images/pa3-jurisdiction.jpg" 
+         alt="Map highlighting the jurisdictional boundaries of Pennsylvania's 3rd district" 
+         style="width: 100%; border-radius: 12px; border: 1px solid #ddd;">
+  </div>
+
+  <div class="schnell-flex-text">
+    <h2>Campaign Funding and Local Influence</h2>
+    <p>
+      Campaign funding should reflect the interests of the people who live in the district. I support limiting donations to individuals and organizations within the jurisdiction.
+    </p>
+    <p>
+      Local voices should guide local representation. Large outside contributions shift attention away from community needs and reduce public trust.
+    </p>
+  </div>
 </section>
 
 <section class="legislative-transition">
