--- a/constitution.html
+++ b/constitution.html
@@ -42,66 +42,161 @@
   <h2>A Constitutional Framework for Representation</h2>
 
   <p>
-    I consider myself a Constitutionalist. I believe the federal government functions best when it operates within clearly defined limits and responsibilities.
+    The Constitution protects people from unaccountable power. It keeps decisions close to the public and sets clear limits on what the federal government may do. That is the standard I use when representing you.
   </p>
 
   <p>
-    The Constitution establishes a government with specific and enumerated powers. When those limits are respected, government becomes more predictable, more transparent, and more accountable to the people it serves.
+    I consider myself a Constitutionalist. I believe Congress must stay within the limits the Constitution provides. These limits are the foundation for a government that is accountable, affordable, and focused on its core responsibilities.
+  </p>
+
+  <p>
+    James Madison described this clearly in Federalist No. 45: “The powers delegated by the proposed Constitution to the federal government are few and defined. Those which are to remain in the State governments are numerous and indefinite.” That principle guided the design of our system, and it remains essential for effective self-government.
   </p>
 </section>
 
 <section class="callout">
-  <strong>The Constitution provides structure and responsibility for federal power.</strong><br>
-  A stable government begins with clear boundaries and consistent application of the law.
+  <strong>Article I, Section 8: The Few and Defined Powers</strong><br>
+  Article I, Section 8 lists the powers of Congress. These are grants of authority and also limits. Each power has a specific meaning rooted in the founding era.
+</section>
+
+<section class="enumerated-powers">
+  <div>
+    <h4>1) Lay and collect taxes, duties, imposts, and excises to pay debts and provide for the common defense and general welfare, applied uniformly across the United States</h4>
+    <p>This allows Congress to raise revenue for national purposes. The spending must support the limited federal responsibilities listed in the Constitution.</p>
+  </div>
+
+  <div>
+    <h4>2) Borrow money on the credit of the United States</h4>
+    <p>This allows Congress to issue debt for legitimate federal functions. It does not authorize borrowing for programs outside the enumerated powers.</p>
+  </div>
+
+  <div>
+    <h4>3) Regulate commerce with foreign nations, among the states, and with Indian tribes</h4>
+    <p>The founding understanding of “commerce” referred to trade and exchange. It did not include manufacturing, agriculture, labor, or general economic activity. The power covers the handshake between parties across jurisdictional lines. It does not reach production or consumption inside a state.</p>
+  </div>
+
+  <div>
+    <h4>4) Establish uniform rules of naturalization and bankruptcy</h4>
+    <p>These rules must be uniform across the country. They do not authorize broader control over immigration policy or private financial management.</p>
+  </div>
+
+  <div>
+    <h4>5) Coin money, regulate its value, and fix standards of weights and measures</h4>
+    <p>This ensures a stable national currency and consistent measurements.</p>
+  </div>
+
+  <div>
+    <h4>6) Punish counterfeiting of U.S. securities and coin</h4>
+    <p>This protects the integrity of the national currency.</p>
+  </div>
+
+  <div>
+    <h4>7) Establish post offices and post roads</h4>
+    <p>This supports communication and national connectivity. It does not authorize general infrastructure programs.</p>
+  </div>
+
+  <div>
+    <h4>8) Promote the progress of science and useful arts through patents and copyrights</h4>
+    <p>This protects intellectual property for limited times. It does not authorize federal control over research, education, or industry.</p>
+  </div>
+
+  <div>
+    <h4>9) Constitute tribunals inferior to the Supreme Court</h4>
+    <p>This allows Congress to create federal courts for federal cases.</p>
+  </div>
+
+  <div>
+    <h4>10) Define and punish piracies and felonies on the high seas and offenses against the law of nations</h4>
+    <p>This covers crimes outside state jurisdiction and matters involving international law.</p>
+  </div>
+
+  <div>
+    <h4>11) Declare war</h4>
+    <p>This places the decision for war in the hands of the people’s representatives.</p>
+  </div>
+
+  <div>
+    <h4>12) Raise and support armies, with appropriations limited to two years</h4>
+    <p>This ensures civilian control and regular review of military funding.</p>
+  </div>
+
+  <div>
+    <h4>13) Provide and maintain a navy</h4>
+    <p>This supports national defense at sea.</p>
+  </div>
+
+  <div>
+    <h4>14) Make rules for the government and regulation of land and naval forces</h4>
+    <p>This governs the conduct and structure of the armed forces.</p>
+  </div>
+
+  <div>
+    <h4>15) Provide for calling forth the militia to execute laws, suppress insurrections, and repel invasions</h4>
+    <p>This allows temporary federal use of state militias for specific emergencies.</p>
+  </div>
+
+  <div>
+    <h4>16) Provide for organizing, arming, and disciplining the militia</h4>
+    <p>This sets standards for militia readiness while leaving appointment of officers to the states.</p>
+  </div>
+
+  <div>
+    <h4>17) Exercise exclusive legislation over the federal district and federal enclaves</h4>
+    <p>This covers the seat of government and federal properties.</p>
+  </div>
+
+  <div>
+    <h4>18) Make all laws necessary and proper for carrying out these powers</h4>
+    <p>This allows Congress to choose reasonable means to execute its listed powers. It supports the enumerated powers rather than expanding them.</p>
+  </div>
+</section>
+
+<section class="callout">
+  <strong>Many modern federal programs operate outside these boundaries.</strong><br>
+  For example, the Department of Education issues nationwide rules for local schools even though education is not an enumerated federal power.
 </section>
 
 <section>
-  <h2>Article I, Section 8</h2>
+  <h2>Governing with Clear Limits and Practical Benefits</h2>
 
   <p>
-	The Constitution outlines the responsibilities of Congress in Article I, Section 8. These powers form the basis of lawful federal action:
+    I will support legislation that fits within these enumerated powers. I will also support efforts to review, repeal, or return programs to states and local communities when they fall outside these limits.
   </p>
-
-  <ol>
-    <li>Collect taxes</li>
-    <li>Spend for national purposes</li>
-    <li>Borrow money</li>
-    <li>Coin and regulate money</li>
-    <li>Regulate interstate and foreign commerce</li>
-    <li>Establish post offices and roads</li>
-    <li>Define citizenship</li>
-    <li>Create uniform bankruptcy laws</li>
-    <li>Protect patents and copyrights</li>
-    <li>Create lower federal courts</li>
-    <li>Define and punish piracy</li>
-    <li>Declare war</li>
-    <li>Raise and support armies and navies</li>
-    <li>Call forth the militia</li>
-    <li>Make laws necessary and proper to carry out these responsibilities</li>
-  </ol>
 
   <p>
-    These powers provide both authority and limits. Federal programs should be directly connected to these responsibilities. Areas outside this framework are best handled by states, local communities, or individuals.
+    The 10th Amendment confirms that powers not delegated to the federal government belong to the states or to the people. States and communities already manage education, environmental protection, healthcare access, and infrastructure. They do this with more flexibility and closer accountability than a distant federal agency can provide. Pennsylvania can tailor solutions to its own needs, including stronger rural schools and innovative clean energy projects in our region.
   </p>
+
+  <p>Respecting constitutional limits produces clear benefits:</p>
+  <ul>
+    <li>Responsible budgeting through a focus on authorized programs</li>
+    <li>Clear priorities centered on defense, commerce, and individual rights</li>
+    <li>Stronger communities with decision‑making closer to the people</li>
+  </ul>
 </section>
 
-<section>
-  <h2>Governing with Clear Limits</h2>
+<section class="schnell-flex-container">
+  <div class="schnell-flex-text">
+    <h2>What This Means in Practice</h2>
+    <ul>
+      <li>I read every bill through the lens of Article I, Section 8</li>
+      <li>I oppose federal programs that belong at the state or local level</li>
+      <li>I support reforms that increase transparency, accountability, and fiscal discipline</li>
+    </ul>
+  </div>
 
-  <p>
-    I support legislation that aligns with the powers granted to Congress and I support efforts to review federal programs that fall outside this structure.
-  </p>
-
-  <p>
-    Respecting constitutional limits encourages responsible budgeting, clear priorities, and a stronger focus on national responsibilities such as defense, interstate commerce, and the protection of individual rights.
-  </p>
+  <div class="schnell-flex-media">
+    <img src="images/usa-pa-flags.jpg" 
+         alt="The United States national flag and the Commonwealth of Pennsylvania state flag" 
+         style="width: 100%; border-radius: 12px; border: 1px solid #ddd;">
+  </div>
 </section>
 
 <section class="legislative-transition">
   <hr aria-hidden="true">
   <h3>From Platform to Action</h3>
   <p>
-    Government works best when it is open to the people it serves. I am making my legislative priorities public now so you can see exactly how I intend to vote and lead.
+    I want you to know my standards before I take office. You should be able to see how I apply them.
   </p>
   
   <p>
