--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -65,8 +65,13 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc8.pdf')">
-                    Doc8
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/feb9-review.pdf')">
+                    ICE and Federal Limits
+                </a>
+            </li>
+            <li>
+                <a href="#" class="pdf-link" onclick="loadPDF('documents/doc9.pdf')">
+                    Doc9
                 </a>
             </li>
         </ul>
